--- a/cgu.html
+++ b/cgu.html
@@ -1,38 +1,250 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conditions Générales d'Utilisation - StaySafe</title>
-    <link rel="stylesheet" href="styles/cgu.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Conditions Générales d'Utilisation - StaySafe Scan</title>
+  <meta name="description" content="Conditions Générales d’Utilisation de l’application StaySafe Scan." />
+  <link rel="stylesheet" href="styles/cgu.css" />
 </head>
 <body>
-    <div class="container">
-        <h1>Conditions Générales d'Utilisation</h1>
-        
-        <section class="cgu-section">
-            <h2>1. Acceptation des conditions</h2>
-            <p>En accédant et en utilisant ce service, vous acceptez d'être lié par ces conditions d'utilisation.</p>
-        </section>
+  <main class="container">
+    <header>
+      <h1>Terms of Use - StaySafe Scan</h1>
+      <p class="last-update"><strong>Last Updated:</strong> October 26, 2025</p>
+    </header>
 
-        <section class="cgu-section">
-            <h2>2. Description du service</h2>
-            <p>StaySafe est une application de sécurité permettant aux utilisateurs de [description du service].</p>
-        </section>
+    <!-- 1 -->
+    <section class="cgu-section" id="acceptance">
+      <h2>1. ACCEPTANCE OF TERMS</h2>
+      <p>By downloading, installing, or using the StaySafe Scan application (the "App"), you agree to be bound by these Terms of Use. If you do not accept these terms, please do not use the App.</p>
+    </section>
 
-        <section class="cgu-section">
-            <h2>3. Utilisation du service</h2>
-            <p>Les utilisateurs s'engagent à utiliser le service de manière responsable et conformément aux lois en vigueur.</p>
-        </section>
+    <!-- 2 -->
+    <section class="cgu-section" id="service-description">
+      <h2>2. SERVICE DESCRIPTION</h2>
+      <p>StaySafe Scan is a mobile application designed to help users detect potential hidden cameras and spy devices using their device's sensors (WiFi, Bluetooth, magnetometer, camera).</p>
+      <p>The App functions as a detection aid tool and does not guarantee 100% detection of all hidden devices.</p>
+    </section>
 
-        <section class="cgu-section">
-            <h2>4. Protection des données</h2>
-            <p>Nous nous engageons à protéger vos données personnelles conformément au RGPD et à notre politique de confidentialité.</p>
-        </section>
+    <!-- 3 -->
+    <section class="cgu-section" id="license">
+      <h2>3. LICENSE</h2>
+      <p>We grant you a limited, non-exclusive, non-transferable, and revocable license to use the App for personal, non-commercial purposes in accordance with these Terms.</p>
+      <p>You agree NOT to:</p>
+      <ul>
+        <li>Use the App for illegal or unauthorized purposes</li>
+        <li>Modify, decompile, or reverse engineer the App</li>
+        <li>Copy, distribute, or resell the App</li>
+        <li>Use the App to violate others' privacy</li>
+        <li>Use the App for harassment or spying</li>
+      </ul>
+    </section>
 
-        <footer>
-            <p>Dernière mise à jour : Février 2024</p>
-        </footer>
-    </div>
+    <!-- 4 -->
+    <section class="cgu-section" id="data">
+      <h2>4. DATA COLLECTION AND USE</h2>
+
+      <h3>4.1 Personal Data</h3>
+      <p>The App DOES NOT COLLECT ANY PERSONAL DATA. All analyses are performed locally on your device.</p>
+
+      <h3>4.2 Technical Data</h3>
+      <p>The App accesses the following device sensors:</p>
+      <ul>
+        <li>WiFi: To scan available networks</li>
+        <li>Bluetooth: To detect nearby devices</li>
+        <li>Magnetometer: To measure magnetic fields</li>
+        <li>Camera: To detect lens reflections</li>
+        <li>Location: Only for WiFi scanning (not stored)</li>
+      </ul>
+      <p>This data is used only during analysis and is never transmitted, stored, or shared.</p>
+
+      <h3>4.3 Advertising</h3>
+      <p>The App displays ads via Google AdMob. Google may collect certain data for advertising purposes in accordance with its privacy policy: 
+        <a href="https://policies.google.com/privacy" target="_blank" rel="noopener">https://policies.google.com/privacy</a>
+      </p>
+    </section>
+
+    <!-- 5 -->
+    <section class="cgu-section" id="permissions">
+      <h2>5. REQUIRED PERMISSIONS</h2>
+      <p>The App requires the following permissions:</p>
+      <ul>
+        <li>WiFi Access: To scan networks</li>
+        <li>Bluetooth Access: To detect devices</li>
+        <li>Camera Access: For lens detection</li>
+        <li>Location Access: For WiFi scanning (required by iOS/Android)</li>
+        <li>Internet Access: To display ads</li>
+      </ul>
+      <p>You can revoke these permissions at any time in your device settings, but this may limit the App's functionality.</p>
+    </section>
+
+    <!-- 6 -->
+    <section class="cgu-section" id="limitations">
+      <h2>6. LIMITATIONS AND WARNINGS</h2>
+
+      <h3>6.1 Accuracy</h3>
+      <p>The App is an aid tool and does not guarantee:</p>
+      <ul>
+        <li>Detection of all hidden devices</li>
+        <li>Absence of false positives</li>
+        <li>100% accuracy</li>
+      </ul>
+
+      <h3>6.2 Factors Affecting Detection</h3>
+      <p>Results may vary depending on:</p>
+      <ul>
+        <li>Type of camera or device</li>
+        <li>Environment (interference, materials)</li>
+        <li>Your device's capabilities</li>
+        <li>Distance and orientation</li>
+      </ul>
+
+      <h3>6.3 Responsible Use</h3>
+      <p>The App should be used as a complement to other security measures, not as the sole means of protection.</p>
+    </section>
+
+    <!-- 7 -->
+    <section class="cgu-section" id="disclaimer">
+      <h2>7. DISCLAIMER OF WARRANTIES</h2>
+      <p>THE APP IS PROVIDED "AS IS" AND "AS AVAILABLE" WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED.</p>
+      <p>We do not warrant that:</p>
+      <ul>
+        <li>The App will be error-free or bug-free</li>
+        <li>The App will operate without interruption</li>
+        <li>Results will be accurate or reliable</li>
+        <li>The App will detect all hidden devices</li>
+      </ul>
+    </section>
+
+    <!-- 8 -->
+    <section class="cgu-section" id="liability">
+      <h2>8. LIMITATION OF LIABILITY</h2>
+      <p><strong>TO THE FULLEST EXTENT PERMITTED BY APPLICABLE LAW:</strong></p>
+      <p>We shall NOT be liable for any direct, indirect, incidental, special, consequential, or punitive damages resulting from:</p>
+      <ul>
+        <li>Use or inability to use the App</li>
+        <li>Any content obtained through the App</li>
+        <li>Unauthorized access to your data</li>
+        <li>False positives or false negatives</li>
+        <li>Property damage or personal injury</li>
+        <li>Loss of data or profits</li>
+        <li>Privacy violations</li>
+      </ul>
+      <p><strong>YOU USE THE APP AT YOUR OWN RISK.</strong></p>
+    </section>
+
+    <!-- 9 -->
+    <section class="cgu-section" id="indemnification">
+      <h2>9. INDEMNIFICATION</h2>
+      <p>You agree to indemnify, defend, and hold harmless the App publisher, its affiliates, officers, agents, and employees from any claim, damage, obligation, loss, liability, cost, or debt, and expense arising from:</p>
+      <ul>
+        <li>Your use of the App</li>
+        <li>Your violation of these Terms</li>
+        <li>Your violation of third-party rights</li>
+      </ul>
+    </section>
+
+    <!-- 10 -->
+    <section class="cgu-section" id="ip">
+      <h2>10. INTELLECTUAL PROPERTY</h2>
+      <p>All intellectual property rights relating to the App (source code, design, logos, texts, graphics) belong to the publisher and are protected by intellectual property laws.</p>
+    </section>
+
+    <!-- 11 -->
+    <section class="cgu-section" id="modifications">
+      <h2>11. APP MODIFICATIONS</h2>
+      <p>We reserve the right to:</p>
+      <ul>
+        <li>Modify or discontinue the App at any time</li>
+        <li>Update features</li>
+        <li>Fix bugs</li>
+        <li>Modify these Terms</li>
+      </ul>
+      <p>Significant changes will be notified via an App update.</p>
+    </section>
+
+    <!-- 12 -->
+    <section class="cgu-section" id="termination">
+      <h2>12. TERMINATION</h2>
+      <p>We may suspend or terminate your access to the App at any time, without notice, in case of:</p>
+      <ul>
+        <li>Violation of these Terms</li>
+        <li>Fraudulent or abusive use</li>
+        <li>Request from competent authorities</li>
+      </ul>
+      <p>You may stop using the App at any time by uninstalling it.</p>
+    </section>
+
+    <!-- 13 -->
+    <section class="cgu-section" id="third-parties">
+      <h2>13. THIRD-PARTY LINKS</h2>
+      <p>The App may contain links to third-party sites or services (including through ads). We are not responsible for the content, privacy policies, or practices of these third parties.</p>
+    </section>
+
+    <!-- 14 -->
+    <section class="cgu-section" id="legal-compliance">
+      <h2>14. LEGAL COMPLIANCE</h2>
+
+      <h3>14.1 Legal Use</h3>
+      <p>You agree to use the App in compliance with all applicable laws and regulations. It is your responsibility to ensure that use of the App is legal in your jurisdiction.</p>
+
+      <h3>14.2 Privacy Respect</h3>
+      <p>You agree not to use the App to:</p>
+      <ul>
+        <li>Illegally spy on or monitor people</li>
+        <li>Violate others' privacy</li>
+        <li>Record or film without consent</li>
+      </ul>
+    </section>
+
+    <!-- 15 -->
+    <section class="cgu-section" id="minors">
+      <h2>15. MINORS</h2>
+      <p>The App is intended for users aged 13 and over. If you are under 18, you must obtain permission from your parents or legal guardians before using the App.</p>
+    </section>
+
+    <!-- 16 -->
+    <section class="cgu-section" id="law">
+      <h2>16. GOVERNING LAW AND JURISDICTION</h2>
+      <p>These Terms are governed by the laws applicable in your country of residence.</p>
+      <p>Any dispute relating to the App or these Terms shall be subject to the exclusive jurisdiction of the competent courts.</p>
+    </section>
+
+    <!-- 17 -->
+    <section class="cgu-section" id="severability">
+      <h2>17. SEVERABILITY</h2>
+      <p>If any provision of these Terms is found to be invalid or unenforceable, the other provisions shall remain in effect.</p>
+    </section>
+
+    <!-- 18 -->
+    <section class="cgu-section" id="entire-agreement">
+      <h2>18. ENTIRE AGREEMENT</h2>
+      <p>These Terms constitute the entire agreement between you and the publisher regarding use of the App.</p>
+    </section>
+
+    <!-- 19 -->
+    <section class="cgu-section" id="contact">
+      <h2>19. CONTACT</h2>
+      <p>For any questions regarding these Terms, please contact us:</p>
+      <ul>
+        <li>Email: <a href="mailto:walidsoussidev@gmail.com">walidsoussidev@gmail.com</a></li>
+      </ul>
+      <p><strong>App Name:</strong> StaySafe Scan<br />
+         <strong>Publisher:</strong> walid <br />
+         <strong>Terms Version:</strong> 1.0<br />
+         <strong>Effective Date:</strong> October 26, 2025
+      </p>
+    </section>
+
+    <footer class="footer">
+      <p>&copy; <span id="year"></span> StaySafe Scan — All rights reserved.</p>
+    </footer>
+  </main>
+
+  <script>
+    // Year auto-update
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
