--- a/cgu.html
+++ b/cgu.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="styles/cgu.css" />
 </head>
 <body>
+  <nav class="top-nav">
+    <div class="nav-container">
+      <a href="cgu.html" class="nav-link active">Conditions Générales d'Utilisation</a>
+      <a href="privacy.html" class="nav-link">Politique de Confidentialité</a>
+    </div>
+  </nav>
+
   <main class="container">
     <header>
       <h1>Terms of Use - StaySafe Scan</h1>
@@ -194,14 +201,7 @@
       <ul>
         <li>Illegally spy on or monitor people</li>
         <li>Violate others' privacy</li>
-        <li>Record or film without consent</li>
-      </ul>
-    </section>
-
-    <!-- 15 -->
-    <section class="cgu-section" id="minors">
-      <h2>15. MINORS</h2>
-      <p>The App is intended for users aged 13 and over. If you are under 18, you must obtain permission from your parents or legal guardians before using the App.</p>
+       
     </section>
 
     <!-- 16 -->
