--- a/cgu.html
+++ b/cgu.html
@@ -11,7 +11,7 @@
   <nav class="top-nav">
     <div class="nav-container">
       <a href="cgu.html" class="nav-link active">Conditions Générales d'Utilisation</a>
-      <a href="privacy.html" class="nav-link">Politique de Confidentialité</a>
+      <a href="ppv.html" class="nav-link">Politique de Confidentialité</a>
     </div>
   </nav>
 
