--- a/ppv.html
+++ b/ppv.html
@@ -7,7 +7,14 @@
   <meta name="description" content="Privacy Policy of StaySafe Scan - Hidden Camera Detector"/>
   <link rel="stylesheet" href="styles/cgu.css"/>
 </head>
-<body>
+<body>   
+    <nav class="top-nav">
+    <div class="nav-container">
+      <a href="cgu.html" class="nav-link active">Conditions Générales d'Utilisation</a>
+      <a href="ppv.html" class="nav-link">Politique de Confidentialité</a>
+    </div>
+  </nav>
+
   <main class="container">
     <header>
       <h1>🔒 PRIVACY POLICY</h1>
