--- a/ppv.html
+++ b/ppv.html
@@ -304,7 +304,7 @@
         <li>Email: <a href="mailto:walidsoussidev@gmail.com">walidsoussidev@gmail.com</a></li>
       </ul>
       <p><strong>App Name:</strong> StaySafe Scan<br/>
-         <strong>Publisher:</strong> [Your name or company name]<br/>
+         <strong>Publisher:</strong> walid <br/>
          <strong>Website:</strong> [Your website if applicable]</p>
       <p><em>Response Time:</em> We aim to respond to all inquiries within 7 business days.</p>
     </section>
